@@ -66,6 +66,7 @@ Revision:
 * #643: content can now be edited again (Phoenyx)
 * #574: fixed xoopsCheckAll, xoopsCheckGroup, xoopsCheckAllElements using jQuery (Phoenyx)
 * #645: fixed fatal error while parsing valid customtag php code (Phoenyx)
+* #642: dhtmltextarea functions (bold, italic, smileys) are now working with and without jQuery (Phoenyx)
 
 ===2009-06-20 : 1.2 Alpha 2.1 ===
 '''Fixed'''
